[gd_scene load_steps=21 format=3 uid="uid://bpttjmqifxeje"]

[ext_resource type="Script" path="res://Scripts/Ennemis/Ennemi.gd" id="1_xyglr"]
[ext_resource type="PackedScene" uid="uid://d0dtwv8tpr64v" path="res://Scenes/ContenuNiveaux/coin.tscn" id="2_bvqtq"]
[ext_resource type="Texture2D" uid="uid://bqbbqila16o1i" path="res://Images/Enemies/Rat/Rat_walk_right.png" id="3_xlqxf"]
[ext_resource type="Texture2D" uid="uid://bweylh6cc1jop" path="res://Images/Enemies/Rat/Rat_Death_right.png" id="4_waxoi"]
[ext_resource type="AudioStream" uid="uid://dtlxw6nwvwfii" path="res://sounds effects/Rat Sounds Effect death.mp3" id="5_y7c7h"]
[ext_resource type="AudioStream" uid="uid://bgqouu5slgwlq" path="res://sounds effects/Rat Squeaking Sound Effect spawn.mp3" id="6_ht5x1"]
[ext_resource type="AudioStream" uid="uid://ejttxqfcsmp4" path="res://sounds effects/taking damage Sound Effect.mp3" id="7_ivlk7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vffb2"]
radius = 7.07107

[sub_resource type="AtlasTexture" id="AtlasTexture_3qcvd"]
atlas = ExtResource("3_xlqxf")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvlsi"]
atlas = ExtResource("3_xlqxf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uae6l"]
atlas = ExtResource("3_xlqxf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ui26"]
atlas = ExtResource("3_xlqxf")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r51uv"]
atlas = ExtResource("3_xlqxf")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox85p"]
atlas = ExtResource("4_waxoi")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7u4u"]
atlas = ExtResource("4_waxoi")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3so66"]
atlas = ExtResource("4_waxoi")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xy2wk"]
atlas = ExtResource("4_waxoi")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljdw5"]
atlas = ExtResource("4_waxoi")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u52jp"]
atlas = ExtResource("3_xlqxf")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3ox5e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qcvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvlsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uae6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ui26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r51uv")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox85p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7u4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3so66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy2wk")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_ljdw5")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u52jp")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[node name="Enemy" type="CharacterBody2D" groups=["Ennemi"]]
collision_layer = 2
collision_mask = 11
motion_mode = 1
script = ExtResource("1_xyglr")
spawnable = ExtResource("2_bvqtq")

[node name="Hurtbox" type="CollisionShape2D" parent="."]
rotation = -1.57079
shape = SubResource("CircleShape2D_vffb2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -15)
sprite_frames = SubResource("SpriteFrames_3ox5e")
animation = &"idle"
autoplay = "Run"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Audio_Dead" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_y7c7h")
volume_db = -10.0
bus = &"SFX"

[node name="Audio_Spawn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ht5x1")
volume_db = -20.0
autoplay = true
bus = &"SFX"

[node name="Audio_Damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ivlk7")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
